# neohome

./: .editorconfig  .envrc  .gitattributes  .gitignore  404.html  README.md  _config.ts  astro.config.ts  contentlayer.config.ts  deno.json  diff.sh  eslint.config.js  flake.nix  index.html  index.json  index.xml  justfile  nvfetcher.toml  package-lock.json  package.json  readme.md  robots.txt  shell.nix  sitemap.xml  tailwind.config.js  tailwind.config.ts  tsconfig.json  wrangler.toml
.github/workflows/: deploy.yaml
_sources/: generated.json  generated.nix
assets/css/: custom.css
blog/: index.html  index.xml
blog/channels-to-flakes/: index.html
blog/declarative-ubuntu/: index.html
blog/gitea-drone/: index.html
blog/nix-filter/: index.html
blog/nix-intro/: index.html
blog/nix-rustup/: index.html
components/: Footer.tsx  LayoutWrapper.tsx
components/social-icons/: index.tsx
config/_default/: config.toml  languages.en.toml  menus.en.toml  params.toml
content/: _index.md
content/blog/: _index.md
css/: main.bundle.min.fe55d6f12d2d2e255e5716286799ad15cc522e11824fca6c256aed07a6a05b70710c064ee687aad95b205021be30d92ec0f1207941aaffc7918da302d21cd9e5.css
data/: headerNavLinks.ts  siteMetadata.js
data/authors/: default.mdx
layouts/: AuthorLayout.tsx  PostLayout.tsx
neohome-rs/: Cargo.toml  makefile  package.json
neohome-rs/npm/linux-x64-gnu/: package.json
neohome-rs/src/: lib.rs
pages/: index.tsx
public/: _headers
src/: _data.yaml  card.tsx  date.ts  index.md  og.tsx  opengraph.tsx  rehype.ts  remark.ts
tags/: index.html  index.xml
(+142 files in other folders)
