[package]
edition = "2021"
name = "neohome-rs"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
html-escape = "0.2.13"
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.12.2", default-features = false, features = ["napi4"] }
napi-derive = "2.12.2"
tree-sitter-dynamic = { git = "https://github.com/viperML/tree-sitter", version = "0.1.0" }
tree-sitter-highlight = "0.22.6"

[build-dependencies]
napi-build = "2.0.1"

[profile.release]
lto = true
strip = "symbols"
